--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "dragon-of-the-day",
+  "name": "dayly-dragon",
   "version": "1.0.0",
   "description": "A daily dragon generator.",
   "main": "index.js",
   "scripts": {
     "build": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Rafael Silva",
+  "license": "MIT",
   "dependencies": {
     "handlebars": "^4.7.7",
     "node-html-to-image": "^3.1.0"
