--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "dayly-dragon",
+  "name": "dragon-of-the-day",
   "version": "1.0.0",
   "description": "A daily dragon generator.",
   "main": "index.js",
   "scripts": {
     "build": "node index.js"
   },
-  "author": "Rafael Silva",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "handlebars": "^4.7.7",
+    "mongoose": "^5.13.2",
     "node-html-to-image": "^3.1.0"
   }
 }
